# ham-iltonian

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: knapsack_problem_example.py  market_dependent_portfolio_example.py  maxcut_problem_example.py  number_partitioning_example.py  portfolio_problem_example.py  time_dependent_tsp_example.py  tsp_problem_example.py
src/: __init__.py  hamiltonian.py
src/examples/: maxcut.ipynb  meta_qaoa_maxcut.py  parameter_analysis.py  solution_landscape.ipynb
src/hamiltonians/: __init__.py  base.py  knapsack.py  maxcut.py  number_partitioning.py  portfolio.py  tsp.py
src/hamiltonians/algorithms/: meta_map.py  trainer.py  vqa.py
src/hamiltonians/algorithms/circuits/: pennylane_circuits.py  qiskit_circuits.py
src/hamiltonians/hamiltonian/: __init__.py  hamiltonian.py
src/hamiltonians/parameter_modifiers/: __init__.py  knapsack.py  maxcut.py  number_partitioning.py  tsp.py
src/hamiltonians/problems/: __init__.py  base.py  instance_generators.py  knapsack.py  maxcut.py  number_partitioning.py  portfolio.py  tsp.py
src/hamiltonians/solution_analysis/: __init__.py  maxcut.py
src/hamiltonians/utils/: __init__.py  graph_utils.py  parameter_viz.py  pauli_utils.py
src/parameter_modifiers/: __init__.py  knapsack.py  maxcut.py  portfolio.py
src/problems/: __init__.py  base.py  instance_generators.py  knapsack.py  maxcut.py  number_partitioning.py  portfolio.py  tsp.py
src/utils/: __init__.py  classical_solvers.py  graph_utils.py  instance_generators.py  pauli_utils.py
tests/: test_hamiltonians.py
