[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamiltonians"
version = "0.1.0"
authors = [
  { name="Federico Harjes" },
]
description = "A library for creating and optimizing Hamiltonians for combinatorial optimization problems."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pennylane>=0.31.0",
    "numpy>=1.22.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/FedeHR/ham-iltonian"
"Bug Tracker" = "https://github.com/FedeHR/ham-iltonian/issues"

[tool.setuptools]
package-dir = {"" = "src"}
